# gl-117

./: Makefile.in  README.wii  configure  configure.ac  configure.in
debian/: changelog  control  copyright  docs  gl-117-data.install  gl-117.desktop  gl-117.install  menu  rules
src/: Makefile.in  common.h  conf.cpp  dirs.cpp  loader_tga.cpp  main.cpp
wii/: conf  conf.interface  make-package.sh  meta.xml
